--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -3,7 +3,7 @@
 <body>
     <h1>Задание 1</h1>
     <p>Выполнено в рамках ТЗ первой недели</p>
-<img src="C:\Users\Администратор\Desktop\img\dog1.png" alt="">
-<img src="../../dog3.png" alt="">
+<img src="/homework/img/dog1.png" alt="">
+<img src="../../img/dog3.png" alt="">
 </body>
 </html> 
